--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
-<p class="p2"><span class="s1">Hello! I am an undergraduate at UC Berkeley majoring in Mathematics.</span></p>
+<p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
