--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">MUSA 174: Category Theory</span></p>
-<p class="p5"><span class="s2"><a href="Cat.pdf">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="cat.pdf" target="_blank">Notes</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math 55: Discrete Math</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
