--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p class="p5"><span class="s2"><a href="Cat.pdf" target="_blank">Notes</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math 55: Discrete Math</span></p>
-<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="Discrete_Math_55_notes.pdf" target="_blank>Notes</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math H185: Complex Analysis</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
