--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
 <ul>
-  <li>In order to familiarize myself with github</li>
-  <li>So I have all of my notes stored in one location</li>
-  <li>To get better at latex and computers</li>
+  <li class="p2">In order to familiarize myself with github</li>
+  <li class="p2">So I have all of my notes stored in one location</li>
+  <li class="p2">To get better at latex and computers</li>
 </ul>
 </span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
