--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p class="p2"><span class="s1">Here is some of my Work Experience<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
-""<p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. I work<span class="Apple-converted-space"> </span></span></p>""
+<p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. I work<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">link</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
