--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
   </style>
 </head>
 <body>
-<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
+<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
 </span></p>
-<ul class="p2"><span class="s1">
-  <li class="p2">In order to familiarize myself with github</li>
-  <li class="p2">So I have all of my notes stored in one location</li>
-  <li class="p2">To get better at latex and computers</li>
+<ul>
+  <li>In order to familiarize myself with github</li>
+  <li>So I have all of my notes in one place</li>
+  <li>To get better at latex and computers</li>
 </ul>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
+
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">MUSA 174: Category Theory</span></p>
@@ -38,7 +39,8 @@
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/Classes/Classes%20(taken)/Berkeley%20Sem%201/Category%20Theory%20MUSA%20174/Cat.pdf">Notes</a></span></p>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
+
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p class="p2"><span class="s1">Here is some of my Work Experience<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. I work<span class="Apple-converted-space"> </span></span></p>
