--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {background-color: #edffff}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px Times; color: #032658; -webkit-text-stroke: #032658}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #fba714; -webkit-text-stroke: #fba714}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px Times; color: #fba714; -webkit-text-stroke: #fba714}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
   </style>
@@ -38,7 +38,7 @@
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
-<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/Classes/Classes%20(taken)/Berkeley%20Sem%201/Category%20Theory%20MUSA%20174/Cat.pdf">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="142.pdf" target="_blank">Notes</a></span> (Unfinished) </p>
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p class="p2"><span class="s1">Here is some of my Work Experience<span class="Apple-converted-space"> </span></span></p>
