--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="142.pdf" target="_blank">Notes</a></span> (Unfinished) </p>
 
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
+<p class="p2"><span class="s1">Currently, I am participating in two Directed Reading Programs.<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s1"></span><br></p>
+<p  class="p2"><span class="s1">I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance.<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s1"></span><br></p>
+<p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project about the lagrange inversion theorem. <span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s1"></span><br></p>
+<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">Lagrange_Inversion</a></span></p>
+<p class="p4"><span class="s1"></span><br></p>
+
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p class="p2"><span class="s1">Here is some of my Work Experience<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
