--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
-<p class="p5"><span class="s2"><a href="142.pdf" target="_blank">Notes</a></span> (Unfinished) </p>
+<p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span> (Unfinished) </p>
 <p></p>
   
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
