--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
     span.s2 {text-decoration: underline ; font-kerning: none}
   </style>
 </head>
+
+  
+<Title>Adrian Yuan-han Fry</Title>
+
+  <CENTER>
+<H1>
+<color: #032658> Adrian Fry </font>
+</H1>
+    
 <body>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
+
+  
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
 </span></p>
 <ul>
