--- a/index.html
+++ b/index.html
@@ -16,51 +16,45 @@
   </style>
 </head>
 
-  
-<Title>Adrian Yuan-han Fry</Title>
-
   <CENTER>
-<H1>
-<color: #032658> Adrian Fry </font>
-</H1>
-    
 <body>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
-
+  </CENTER>
   
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
-</span></p>
+
 <ul>
   <li>In order to familiarize myself with github</li>
   <li>So I have all of my notes in one place</li>
   <li>To get better at latex and computers</li>
 </ul>
+</span></p>
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley<span class="Apple-converted-space"> </span></span></p>
-<p></p></p>
+<br>
 <p class="p2"><span class="s1">MUSA 174: Category Theory</span></p>
 <p class="p5"><span class="s2"><a href="Cat.pdf" target="_blank">Notes</a></span></p>
 <p></p>
 <p class="p2"><span class="s1">Math 55: Discrete Math</span></p>
 <p class="p5"><span class="s2"><a href="Discrete_Math_55_notes.pdf" target="_blank">Notes</a></span></p>
-<p></p></p>
+<br>
 <p class="p2"><span class="s1">Math H185: Complex Analysis</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span> (Unfinished) </p>
-<p></p>
+<br>
   
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
 <p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.<span class="Apple-converted-space"> </span></span></p>
-<p class="p4"><span class="s1"></span><br></p>
-<p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance.<span class="Apple-converted-space"></span></span></p>
-<p class="p4"><span class="s1"></span><br></p>
+<br>
+<p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance.</span></p>
+<br>
 <p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project
   about the lagrange inversion theorem. <span class="Apple-converted-space"> </span></span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">Lagrange_Inversion</a></span></p>
-<p></p></p>
+<br>
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 22.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p class="p2"><span class="s1">Here is some of my Work Experience<span class="Apple-converted-space"> </span></span></p>
