--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ MUSA 174: Category Theory</span></p>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
   materials, using canva and google sheets, optimizing  <span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
-<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">link</a></span></p>
+<p class="p5"><span class="s2"><a href="new/index.html">link</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a></span></p>
