--- a/new/index.html
+++ b/new/index.html
@@ -9,3 +9,5 @@
 </CENTER>
 
 <h3> I want to make a different page on my website.  This is my attempt. </h3>
+
+<p class="p2"><span class="s1">Now that I have different pages on my website I have so many things I can create.</span></p>
