--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
   </CENTER>
-  
+<br>
+<p class="p5"><span class="s2"><a href="new/index.html">Page2</a>  <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
+<br>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
 
 <ul>
@@ -62,10 +64,7 @@ MUSA 174: Category Theory</span></p>
 <p class="p4"><span class="s1"></span><br></p>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
   materials, using canva and google sheets, optimizing  <span class="Apple-converted-space"> </span></span></p>
-<p class="p4"><span class="s1"></span><br></p>
-<p class="p5"><span class="s2"><a href="new/index.html">link</a></span></p>
-<p class="p4"><span class="s1"></span><br></p>
-<p class="p4"><span class="s1"></span><br></p>
+<br>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 </body>
