--- a/new/index.html
+++ b/new/index.html
@@ -14,13 +14,13 @@
   </style>
 </head>
 
-<body bgcolor="#FFFFFF">
 <CENTER>
-<H1>
-<font color="red"> Adrian Fry </font>
-</H1>
-
+<body>
+<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
 </CENTER>
+<br>
+<p class="p5"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
+<br>
 
 <h3> I want to make a different page on my website.  This is my attempt. </h3>
 
