--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <style type="text/css">
     body {background-color: #edffff}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #032658; -webkit-text-stroke: #032658}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Times; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px Times; color: #fba714; -webkit-text-stroke: #fba714}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #fba714; -webkit-text-stroke: #fba714}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
   </style>
@@ -20,7 +20,7 @@
 
 <CENTER>
 <body>
-<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
+<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
 </CENTER>
 <br>
 <p class="p5"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
@@ -35,7 +35,7 @@
 </span></p>
 
 
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley
 <br>
 MUSA 174: Category Theory</span></p>
@@ -46,12 +46,12 @@ MUSA 174: Category Theory</span></p>
 <br>
 <p class="p2"><span class="s1">Math H185: Complex Analysis</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span> (Unfinished) </p>
-<p class="p4"><span class="s1"></span><br></p>
+<br>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span> (Unfinished) </p>
 <br>
   
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
 <p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.<span class="Apple-converted-space"> </span></span></p>
 <br>
 <p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance.</span></p>
@@ -61,9 +61,7 @@ MUSA 174: Category Theory</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">Lagrange_Inversion</a></span></p>
 <br>
 
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
-<p class="p2"><span class="s1">Here is some of my Work Experience<span class="Apple-converted-space"> </span></span></p>
-<p class="p4"><span class="s1"></span><br></p>
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
   materials, using canva and google sheets, optimizing  <span class="Apple-converted-space"> </span></span></p>
 <br>
