--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 MUSA 174: Category Theory</span></p>
 <p class="p5"><span class="s2"><a href="Cat.pdf" target="_blank">Notes</a></span></p>
 <br>
->Math 55: Discrete Math</span></p>
+<p class="p2"><span class="s1">Math 55: Discrete Math</span></p>
 <p class="p5"><span class="s2"><a href="Discrete_Math_55_notes.pdf" target="_blank">Notes</a></span></p>
 <br>
-Math H185: Complex Analysis</span></p>
+<p class="p2"><span class="s1">Math H185: Complex Analysis</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <br>
-Math 142: Elementary Algebraic Topology</span></p>
+<p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span></p>
 <br>
   
@@ -62,7 +62,7 @@ Math 142: Elementary Algebraic Topology</span></p>
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
-  materials, using canva and google sheets, optimizing  <span class="Apple-converted-space"> </span></span></p>
+  materials, using canva and google sheets, and automating tasks  <span class="Apple-converted-space"> </span></span></p>
 <br>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
