--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p class="p5"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
 <br>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
-<ul class="p2">
+<ul> <p class="p2">
   <li>In order to familiarize myself with github</li>
   <li>So I have all of my notes in one place</li>
   <li>To get better at latex and computers</li>
