--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <p class="p5"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
 <br>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
-<ul> <p class="p2">
-  <li>In order to familiarize myself with github</li>
+<ul> 
+  <li class="p2">>In order to familiarize myself with github</li> <!-- Note to self-->
   <li>So I have all of my notes in one place</li>
   <li>To get better at latex and computers</li>
 </ul>
@@ -51,9 +51,9 @@ MUSA 174: Category Theory</span></p>
 <br>
   
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
-<p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.<span class="Apple-converted-space"> </span>
 <br>
-This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance.
+This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
 <br>
 <p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project
   about the lagrange inversion theorem. <span class="Apple-converted-space"> </span></span></p>
@@ -62,7 +62,7 @@ This semester I am doing a mentored reading program in Harmonic Analysis, under 
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
-  materials, using canva and google sheets, and automating tasks  <span class="Apple-converted-space"> </span></span></p>
+  materials, using canva and google sheets, and automating tasks.  <span class="Apple-converted-space"> </span></span></p>
 <br>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a></span></p>
 <p class="p4"><span class="s1"></span><br></p>
