--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <br>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
 <ul> 
-  <li class="p2">>In order to familiarize myself with github</li> <!-- Note to self-->
+  <li>In order to familiarize myself with github</li>
   <li>So I have all of my notes in one place</li>
   <li>To get better at latex and computers</li>
 </ul>
@@ -35,15 +35,15 @@
 
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
-<p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley
+<p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley.
 <br>
-MUSA 174: Category Theory</span></p>
+MUSA 174: Introduction to Category Theory</span></p>
 <p class="p5"><span class="s2"><a href="Cat.pdf" target="_blank">Notes</a></span></p>
 <br>
-<p class="p2"><span class="s1">Math 55: Discrete Math</span></p>
+<p class="p2"><span class="s1">Math 55: Discrete Mathematics </span></p>
 <p class="p5"><span class="s2"><a href="Discrete_Math_55_notes.pdf" target="_blank">Notes</a></span></p>
 <br>
-<p class="p2"><span class="s1">Math H185: Complex Analysis</span></p>
+<p class="p2"><span class="s1">Math H185: Honors Complex Analysis</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
@@ -52,7 +52,7 @@ MUSA 174: Category Theory</span></p>
   
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
 <p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.<span class="Apple-converted-space"> </span>
-<br>
+\n \n
 This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
 <br>
 <p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project
