--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ MUSA 174: Introduction to Category Theory</span></p>
 <br>
   
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
-<p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.<span class="Apple-converted-space"> </span>
-\n \n
-This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
+<p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.</span></p> 
+<br>
+<p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
 <br>
 <p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project
   about the lagrange inversion theorem. <span class="Apple-converted-space"> </span></span></p>
