--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <li>In order to familiarize myself with github</li>
   <li>So I have all of my notes in one place</li>
   <li>To get better at latex and computers</li>
+  <li><p class="p2"><span class="s1">Math 55: Discrete Mathematics </span></p></li>
 </ul>
 </span></p>
 
@@ -56,15 +57,16 @@ MUSA 174: Introduction to Category Theory</span></p>
 <p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
 <br>
 <p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project
-  about the lagrange inversion theorem. <span class="Apple-converted-space"> </span></span></p>
+  about the lagrange inversion theorem. </span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">Lagrange_Inversion</a></span></p>
 <br>
 
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
-  materials, using canva and google sheets, and automating tasks.  <span class="Apple-converted-space"> </span></span></p>
+  materials, using canva and google sheets, and automating tasks.</span></p>
 <br>
-<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a></span></p>
+
+<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a>   <span class="Apple-converted-space"></span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
 </body>
 </html>
