--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 <br>
 <p class="p5"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
 <br>
-<p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley majoring in Mathematics.  I have a few reasons for creating this website:
+<p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley pursuing a degree in Pure Math.  I have a few reasons for creating this website:
 <ul> 
-  <li>In order to familiarize myself with github</li>
-  <li>So I have all of my notes in one place</li>
-  <li>To get better at latex and computers</li>
-  <li><p class="p2"><span class="s1">Math 55: Discrete Mathematics </span></p></li>
+  <li><p class="p2"><span class="s1"> In order to familiarize myself with github </span></p><</li>
+  <li><p class="p2"><span class="s1"> So I have all of my notes in one place </span></p></li>
+  <li><p class="p2"><span class="s1">To get better at latex and computers </span></p></li>
 </ul>
 </span></p>
 
