--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
 </CENTER>
 <br>
+
 <p class="p5"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
+  
 <br>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley pursuing a degree in Pure Math.  I have a few reasons for creating this website:
 <ul> 
-  <li><p class="p2"><span class="s1"> In order to familiarize myself with github </span></p><</li>
+  <li><p class="p2"><span class="s1"> In order to familiarize myself with github </span></p></li>
   <li><p class="p2"><span class="s1"> So I have all of my notes in one place </span></p></li>
   <li><p class="p2"><span class="s1">To get better at latex and computers </span></p></li>
 </ul>
