--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {background-color: #f8ffff}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #032658; -webkit-text-stroke: #032658}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
-    p.p5 {font: 14.0px Verdana; color: #fba714; -webkit-text-stroke: #fba714}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #fba714; -webkit-text-stroke: #fba714}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
   </style>
