--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <body>
-<div class="w3-container w3-hover-white" style="background-color: ##f7f3dc;" >
+<div class="w3-container w3-hover-white" style="background-color: #f7f3dc;" >
 <h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
 <p style="font: 14.0px Verdana; color: #fba714; -webkit-text-stroke: #fba714"><span class="s2"><a href="index.html">HomePage</a>    <a href="new/index.html">Page2</a>    <a href="file:///Users/adrianfry/253.F16/Cat.pdf">Page3</a></span></p>
 </div>
