--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-  
+<div class="w3-container">
 <br>
 <p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley pursuing a BA in Pure Math.  I have a few reasons for creating this website:
 <ul> 
@@ -72,5 +72,6 @@ MUSA 174: Introduction to Category Theory</span></p>
 
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">link</a>   <span class="Apple-converted-space"></span></span></p>
 <p class="p4"><span class="s1"></span><br></p>
+</div>
 </body>
 </html>
