--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     span.s2 {text-decoration: underline ; font-kerning: none}
     
    .button {border: none; color: white; padding: 5px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; margin: 0px 0px; transition-duration: 0.3s; cursor: pointer;}
-   .button1 {background-color: #f7f3dc; color: black;}
-   .button1:hover {background-color: #4287f5; color: white;}
+   .button1 {background-color: #9FD1FF; color: black;}
+   .button1:hover {background-color: #4287f5; color: #C09748;}
    .button2 {background-color: white; color: black; border: 2px solid #008CBA;}
    .button2:hover {background-color: #008CBA; color: white;}
   </style>
