--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <!-- Title and header-->
 <h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
 <div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
-  <a href="index.html" class="button button1" style="margin: 0;">Home</a>
-  <a href="new/index.html" class="button button1" style="margin: 0;">Page2</a>
-  <a href="file:///Users/adrianfry/253.F16/Cat.pdf" class="button button1" style="margin: 0;">Page3</a>
+  <a href="index.html" class="button button1" style="margin: 0; color: black;">Home</a>
+  <a href="new/index.html" class="button button1" style="margin: 0; color: black;">Page2</a>
+  <a href="file:///Users/adrianfry/253.F16/Cat.pdf" class="button button1" style="margin: 0; color: black;">Page3</a>
 </div>
 </div>
 
