--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
   <a href="index.html" class="button button1" style="margin: 0; color: black;">Home</a>
   <a href="new/index.html" class="button button1" style="margin: 0; color: black;">Page2</a>
-  <a href="file:///Users/adrianfry/253.F16/Cat.pdf" class="button button1" style="margin: 0; color: black;">Page3</a>
+  <a href="new/notes.html" class="button button1" style="margin: 0; color: black;">Notes</a>
 </div>
 </div>
 
