--- a/new/notes.html
+++ b/new/notes.html
@@ -42,6 +42,7 @@
 </div>
 
 
+<div class="w3-container">
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Coursework</b></span></h2>
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley.
 <br>
@@ -57,6 +58,7 @@ MUSA 174: Introduction to Category Theory</span></p>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span></p>
 <br>
-  
+
+</div>
 </body>
 </html>
