--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 <h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
 <div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
   <a href="index.html" class="button button1" style="margin: 0; color: black;">Home</a>
-  <a href="new/index.html" class="button button1" style="margin: 0; color: black;">Page2</a>
-  <a href="new/notes.html" class="button button1" style="margin: 0; color: black;">Notes</a>
+  <a href="new/notes.html" class="button button1" style="margin: 0; color: black;">Coursework</a>
+  <a href="new/projects.html" class="button button1" style="margin: 0; color: black;">Projects</a>
+  <a href="new/experience.html" class="button button1" style="margin: 0; color: black;">Experience</a>
+  <a href="new/index.html" class="button button1" style="margin: 0; color: black;">NewPage</a>
 </div>
 </div>
 
