--- a/new/experience.html
+++ b/new/experience.html
@@ -33,7 +33,7 @@
 <body>
 <div class="w3-container w3-hover-white" style="background-color: #f7f3dc;" >
 <!-- Title and header-->
-<h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
+<h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Experience</b></span></h1>
 <div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
   <a href="../index.html" class="button button1" style="margin: 0; color: black;">Home</a>
   <a href="notes.html" class="button button1" style="margin: 0; color: black;">Coursework</a>
@@ -44,8 +44,8 @@
 </div>
 
 
-<div class="w3-container">
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Experience</b></span></h2>
+<div class="w3-container"><
+<br>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
   materials, using canva and google sheets, and automating tasks.</span></p>
 <br>
