--- a/new/projects.html
+++ b/new/projects.html
@@ -33,7 +33,7 @@
 <body>
 <div class="w3-container w3-hover-white" style="background-color: #f7f3dc;" >
 <!-- Title and header-->
-<h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
+<h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Projects</b></span></h1>
 <div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
   <a href="../index.html" class="button button1" style="margin: 0; color: black;">Home</a>
   <a href="notes.html" class="button button1" style="margin: 0; color: black;">Coursework</a>
@@ -45,7 +45,7 @@
 
 
 <div class="w3-container">
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Projects</b></span></h2>
+<br>
 <p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.</span></p> 
 <br>
 <p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
