--- a/new/experience.html
+++ b/new/experience.html
@@ -44,7 +44,7 @@
 </div>
 
 
-<div class="w3-container"><
+<div class="w3-container">
 <br>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
   materials, using canva and google sheets, and automating tasks.</span></p>
