--- a/new/notes.html
+++ b/new/notes.html
@@ -59,6 +59,12 @@ MUSA 174: Introduction to Category Theory</span></p>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span></p>
 <br>
+<p class="p2"><span class="s1">Math 113: Introduction to Abstract Algebra</span></p>
+<p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
+<br>
+<p class="p2"><span class="s1">Math 110: Abstract Linear Algebra</span></p>
+<p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
+<br>
 
 </div>
 </body>
