--- a/new/notes.html
+++ b/new/notes.html
@@ -48,16 +48,16 @@
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley.
 <br>
 MUSA 174: Introduction to Category Theory</span></p>
-<p class="p5"><span class="s2"><a href="Cat.pdf" target="_blank">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="../Cat.pdf" target="_blank">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 55: Discrete Mathematics </span></p>
-<p class="p5"><span class="s2"><a href="Discrete_Math_55_notes.pdf" target="_blank">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="../Discrete_Math_55_notes.pdf" target="_blank">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math H185: Honors Complex Analysis</span></p>
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
-<p class="p5"><span class="s2"><a href="142%20(14).pdf" target="_blank">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="../142%20(14).pdf" target="_blank">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 113: Introduction to Abstract Algebra</span></p>
 <p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
