--- a/new/projects.html
+++ b/new/projects.html
@@ -50,9 +50,9 @@
 <br>
 <p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
 <br>
-<p  class="p2"><span class="s1">I'm also participating in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under a graduate student.  I am working on a project
-  about the lagrange inversion theorem. </span></p>
-<p class="p5"><span class="s2"><a href="file:///Users/adrianfry/253.F16/Cat.pdf">Lagrange_Inversion</a></span></p>
+<p  class="p2"><span class="s1">During Spring 2025 I participated in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under the mentorship of graduate student Saud Molaib.
+  This program culminated in a final project which was an expository paper about the Theory of Combinatorial Species and a proof of the Lagrange Inversion Formula. </span></p>
+<p class="p5"><span class="s2"><a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">Lagrange_Inversion_slides</a></span></p>
 <br>
   
 </div>
