--- a/new/projects.html
+++ b/new/projects.html
@@ -52,7 +52,7 @@
 <br>
 <p  class="p2"><span class="s1">During Spring 2025 I participated in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under the mentorship of graduate student Saud Molaib.
   This program culminated in a final project for which I wrote an expository paper and made a presentation about the Theory of Combinatorial Species and a proof of the Lagrange Inversion Formula. </span></p>
-<p class="p5"><span class="s2"><a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">Combinatorial_Species_slides</a>, <a href="../DRP_Combinatorial_Species (1).pdf">Combinatorial Species</a></span></p>
+<p class="p5"><span class="s2"><a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">slides</a> <a href="../DRP_Combinatorial_Species (1).pdf">paper</a></span></p>
 <br>
   
 </div>
