--- a/new/projects.html
+++ b/new/projects.html
@@ -46,13 +46,13 @@
 
 <div class="w3-container">
 <br>
-<p class="p2"><span class="s1">Here is where I will put any projects or similar endeavors.</span></p> 
+<p class="p2"><span class="s1">Here are some personal projects and similar endeavors.</span></p> 
 <br>
-<p  class="p2"><span class="s1">This semester I am doing a mentored reading program in Harmonic Analysis, under the mentorship of a postdoc at WUSTL through the Math Alliance. </span></p> <!-- Note to self-->
-<br>
-<p  class="p2"><span class="s1">During Spring 2025 I participated in the Berkeley Math Directed Reading Program, reading about the Theory of Combinatorial Species under the mentorship of graduate student Saud Molaib.
+<p  class="p2"><span class="s1">During Spring 2025 I participated in the <a href="https://wp.math.berkeley.edu/drp/">Berkeley Math Directed Reading Program</a>, reading about the Theory of Combinatorial Species under the mentorship of graduate student Saud Molaib.
   This program culminated in a final project for which I wrote an expository paper and made a presentation about the Theory of Combinatorial Species and a proof of the Lagrange Inversion Formula. </span></p>
 <p class="p5"><span class="s2"><a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">slides</a> <a href="../DRP_Combinatorial_Species (1).pdf">paper</a></span></p>
+<br>
+<p  class="p2"><span class="s1">I also participated in the <a href="https://mathalliancemrp.org/">Math Alliance Mentored Reading Program</a>, where I read some Harmonic Analysis from the textbook by Pereyra and Ward, under the mentorship of a postdoc at WUSTL. </span></p>
 <br>
   
 </div>
