--- a/new/projects.html
+++ b/new/projects.html
@@ -53,7 +53,8 @@
 <p class="p2"><span class="s1">Here is my <a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">slideshow</a> and <a href="../DRP_Combinatorial_Species (1).pdf">paper</a></span></p>
 <br>
 <p  class="p2"><span class="s1">I also participated in the <a href="https://mathalliancemrp.org/">Math Alliance Mentored Reading Program</a>, where I read some Harmonic Analysis from the textbook by Pereyra and Ward, under the mentorship of a postdoc at WUSTL. </span></p>
-<br> <p class="p2"> test link <a href="rrr.com">test</a> </p>
+<br> 
+<p class="p2"><span class="s1"> test link <a href="rrr.com">test</a> vs. </span></p> <p class="p5"><span class="s2"> test link <a href="rrr.com">test</a> </span></p>
   
 </div>
 </body>
