--- a/new/projects.html
+++ b/new/projects.html
@@ -18,6 +18,7 @@
     
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
+    a:link {color: #fba714;}
     a:visited {color: #29009c; background-color: transparent; text-decoration: underline;}
     
    .button {border: none; color: white; padding: 5px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; margin: 0px 0px; transition-duration: 0.3s; cursor: pointer;}
@@ -53,8 +54,7 @@
 <p class="p2"><span class="s1">Here is my <a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">slideshow</a> and <a href="../DRP_Combinatorial_Species (1).pdf">paper</a></span></p>
 <br>
 <p  class="p2"><span class="s1">I also participated in the <a href="https://mathalliancemrp.org/">Math Alliance Mentored Reading Program</a>, where I read some Harmonic Analysis from the textbook by Pereyra and Ward, under the mentorship of a postdoc at WUSTL. </span></p>
-<br> 
-<p class="p2"><span class="s1"> test link <a href="rrr.com">test</a> vs. </span></p> <p class="p5"><span class="s2"> test link <a href="rrr.com">test</a> </span></p>
+<br>
   
 </div>
 </body>
