--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
+    a:link {color: #fba714;}
     a:visited {color: #29009c; background-color: transparent; text-decoration: underline;}
     
    .button {border: none; color: white; padding: 5px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; margin: 0px 0px; transition-duration: 0.3s; cursor: pointer;}
