--- a/new/index.html
+++ b/new/index.html
@@ -16,7 +16,7 @@
 
 <CENTER>
 <body>
-$("#htmlData").load("head.html #header");
+<iframe src="header.html"></iframe>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 27.0px Times; color: #032658; -webkit-text-stroke: #032658"><span class="s1"><b>Adrian Yuan-han Fry</b></span></h1>
 </CENTER>
 <br>
