--- a/new/projects.html
+++ b/new/projects.html
@@ -55,6 +55,8 @@
 <br>
 <p  class="p2"><span class="s1">I also participated in the <a href="https://mathalliancemrp.org/">Math Alliance Mentored Reading Program</a>, where I read some Harmonic Analysis from the textbook by Pereyra and Ward, under the mentorship of a postdoc at WUSTL. </span></p>
 <br>
+<p  class="p2"><span class="s1">Inspired by the readings I did in Harmonic Analysis, I have been trying to figure out the Corona Problem.  Here are my notes on <a href="../Banach_Algebras.pdf">Banach Algebras</a>. </span></p>
+<br>
   
 </div>
 </body>
