--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
 
 <div class="w3-container">
 <br>
-<p class="p2"><span class="s1">Hello! I am a first year undergraduate at UC Berkeley pursuing a BA in Pure Math.  I have a few reasons for creating this website:
+<p class="p2"><span class="s1">Hello! I am a rising sophomore at UC Berkeley pursuing a BA in Pure Math.  I'm interested in math -at the moment I'm especially interested in interesections of Algebra and Analysis, like functional analysis (I recently learned what a <a href="Banach_Algebras.pdf">Banach Algebra</a> is) or algebraic topology-, coding, and music.  I have a few reasons for creating this website:
 <ul> 
   <li><p class="p2"><span class="s1"> In order to familiarize myself with github </span></p></li>
-  <li><p class="p2"><span class="s1"> So I have all of my notes in one place </span></p></li>
-  <li><p class="p2"><span class="s1">To get better at latex and computers </span></p></li>
+  <li><p class="p2"><span class="s1"> To get better at computers</span></p></li>
 </ul>
 </span></p>
-
+<p class="p2"><span class="s1">I plan to compile my class notes, projects, and other materials on this website. I also want this website to function somewhat like a resume, so I'll also add relevant information about myself, such as work experience.</span></p>
 </div>
+
+
 </body>
 </html>
