--- a/new/experience.html
+++ b/new/experience.html
@@ -48,7 +48,7 @@
 <div class="w3-container">
 <br>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
-  materials, using canva and google sheets, and automating tasks.</span></p>
+  materials, using canva and google sheets, adding material to the Berkeley Study Abroad website, and automating tasks.</span></p>
 <br>
 </div>
 </body>
