--- a/new/notes.html
+++ b/new/notes.html
@@ -45,7 +45,7 @@
 </div>
 
 
-<div class="w3-container"><br>
+<div class="w3-container" style="margin: 0px 325px 0px 10px;"><br>
 <p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley.
 <br>
 MUSA 174: Introduction to Category Theory</span></p>
