--- a/new/projects.html
+++ b/new/projects.html
@@ -45,7 +45,7 @@
 </div>
 
 
-<div class="w3-container">
+<div class="w3-container" style="margin: 0px 325px 0px 0px;">
 <br>
 <p class="p2"><span class="s1">Here are some personal projects and similar endeavors.</span></p> 
 <br>
