--- a/new/projects.html
+++ b/new/projects.html
@@ -14,6 +14,7 @@
     body {background-color: #f8ffff}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #032658; -webkit-text-stroke: #032658}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
+    p.p4:after {content:' '; display:block; border:2px solid #d0d0d0;}
     p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #fba714; -webkit-text-stroke: #fba714}
     
     span.s1 {font-kerning: none}
