--- a/new/experience.html
+++ b/new/experience.html
@@ -46,11 +46,14 @@
 </div>
 
 
-<div class="w3-container" style="margin: 0px 325px 0px 0px;">
+<br>
+<div class="w3-container" style="margin: 0px 325px 0px 0px; background-color: white">
+<p  class="p4"><span class="s1">Work Experience</span></p>
 <br>
 <p  class="p2"><span class="s1">Currently I am a Student Marketing Assistant at the UC Berkeley Department of Summer Sessions, Study Abroad, and Lifelong learning. My work involves helping to create marketing
   materials, using canva and google sheets, adding material to the Berkeley Study Abroad website, and automating tasks.</span></p>
-<br>
 </div>
+<br>
+
 </body>
 </html>
