--- a/new/projects.html
+++ b/new/projects.html
@@ -47,7 +47,9 @@
 
 
 <br>
+<div class="w3-container" style="margin: 0px 325px 0px 0px";>
 <p class="p2"><span class="s1">Here are some personal projects and similar endeavors.</span></p> 
+</div>
 <br>
 <div class="w3-container" style="margin: 0px 325px 0px 0px; background-color: white";>
 <p  class="p4"><span class="s1">Directed Reading Programs</span></p>
