--- a/new/notes.html
+++ b/new/notes.html
@@ -45,11 +45,16 @@
 </div>
 </div>
 
-
-<div class="w3-container" style="margin: 0px 325px 0px 0px;"><br>
-<p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley.
 <br>
-MUSA 174: Introduction to Category Theory</span></p>
+<div class="w3-container" style="margin: 0px 325px 0px 0px;">
+<p class="p2"><span class="s1">Below is some of my selected Coursework and Notes from Berkeley.</span></p>
+</div>
+
+<br>
+<div class="w3-container" style="margin: 0px 325px 0px 0px; background-color: white">
+<p class="p4"><span class="s1">Freshman Year</span></p>
+<br>
+<p class="p2"><span class="s1">MUSA 174: Introduction to Category Theory</span></p>
 <p class="p5"><span class="s2"><a href="../Cat.pdf" target="_blank">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 55: Discrete Mathematics </span></p>
@@ -60,14 +65,19 @@ MUSA 174: Introduction to Category Theory</span></p>
 <br>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="../142%20(14).pdf" target="_blank">Notes</a></span></p>
+</div>
+
+<br>
+<div class="w3-container" style="margin: 0px 325px 0px 0px; background-color: white">
+<p class="p4"><span class="s1">Sophomore Year</span></p>
 <br>
 <p class="p2"><span class="s1">Math 113: Introduction to Abstract Algebra</span></p>
 <p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 110: Abstract Linear Algebra</span></p>
 <p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
+</div>
 <br>
 
-</div>
 </body>
 </html>
