--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 </div>
 
 
-<div class="w3-container" style="margin: 0px 325px 0px 0px;">
+<br>
+<div class="w3-container" style="margin: 0px 325px 0px 0px; background-color: white">
+<p class="p4"><span class="s1">About Me</span></p>
 <br>
 <p class="p2"><span class="s1">Hello! I am a rising sophomore at UC Berkeley pursuing a BA in Pure Math.  I'm interested in math -at the moment I'm especially interested in interesections of Algebra and Analysis, like functional analysis (I recently learned what a <a href="Banach_Algebras.pdf">Banach Algebra</a> is) or algebraic topology-, coding, and music.  I have a few reasons for creating this website:
 <ul> 
@@ -56,7 +58,6 @@
 </span></p>
 <p class="p2"><span class="s1">I plan to compile my class notes, projects, and other materials on this website. I also want this website to function somewhat like a resume, so I'll also add relevant information about myself, such as work experience.</span></p>
 </div>
-
 
 </body>
 </html>
