--- a/new/experience.html
+++ b/new/experience.html
@@ -2,10 +2,11 @@
 <html>
 <!-- Practice Website: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_containers_div_header-->
 <!-- Note to self-->
-<head>
+<head
   <link rel="stylesheet" href="style.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 
 <body>
 <div class="w3-container w3-hover-white" style="background-color: #f7f3dc;" >
