--- a/new/experience.html
+++ b/new/experience.html
@@ -2,7 +2,7 @@
 <html>
 <!-- Practice Website: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_containers_div_header-->
 <!-- Note to self-->
-<head
+<head>
   <link rel="stylesheet" href="style.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
